--- a/accounts.yml
+++ b/accounts.yml
@@ -1,7 +1,7 @@
 build:
   version: "3.0"
 
-loans:
+accounts:
   message: "Welcome to EazyBank loans related local APIs "
   contactDetails:
     name: "Amaal Grega - Developer"
