--- a/accounts-prod.yml
+++ b/accounts-prod.yml
@@ -1,7 +1,7 @@
 build:
   version: "1.0"
 
-loans:
+accounts:
   message: "Welcome to EazyBank loans related prod APIs "
   contactDetails:
     name: "Pelias Sudhir - Product Owner"
