--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -1,8 +1,8 @@
 build:
   version: "1.0"
 
-accounts:
-  message: "Welcome to EazyBank accounts related prod APIs "
+loans:
+  message: "Welcome to EazyBank loans related prod APIs "
   contactDetails:
     name: "Reine Aishwarya - Product Owner"
     email: "aishwarya@eazybank.com"
