--- a/loans-qa.yml
+++ b/loans-qa.yml
@@ -2,7 +2,7 @@ build:
   version: "2.0"
 
 loans:
-  message: "Welcome to EazyBank accounts related QA APIs "
+  message: "Welcome to EazyBank loans related QA APIs "
   contactDetails:
     name: "Smitha Ray - QA Lead"
     email: "smitha@eazybank.com"
