--- a/loans.yml
+++ b/loans.yml
@@ -1,8 +1,8 @@
 build:
   version: "3.0"
 
-accounts:
-  message: "Welcome to EazyBank accounts related local APIs "
+loans:
+  message: "Welcome to EazyBank loans related local APIs "
   contactDetails:
     name: "John Doe - Developer"
     email: "john@eazybank.com"
